tests/failing/resolver/expected_type.ri
fn my_fn() void { }

fn main() void {
    let x: my_fn = ();
}
