tests/failing/resolver/expected_type.out
tests/failing/resolver/expected_type.ri:4:12: error: expected type, found function
  4 |     let x: my_fn = ();
    |            ^
rivetc: error: could not compile package `expected_type`, aborting due to previous error.